fix game canvas

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     const totalAssets = CHARACTERS.length;
     let loadedAssets = 0;
 
-    // Improved character loading: don't block Start if an image fails
+    // Improved character loading
     CHARACTERS.forEach(char => {
         char.loaded = false;
         char.image.onerror = function() {
@@ -142,8 +142,7 @@
                 char.loaded = false;
                 loadedAssets++;
                 loadingProgress = (loadedAssets / totalAssets) * 100;
-                // Allow Start once all attempts are done (even if some failed)
-                if (loadedAssets === totalAssets) {
+                if (loadedAssets === totalAssets && CHARACTERS.every(c => c.loaded)) {
                     assetsLoaded = true;
                     gameState.setStart();
                 }
@@ -154,22 +153,13 @@
             char.loaded = true;
             loadedAssets++;
             loadingProgress = (loadedAssets / totalAssets) * 100;
-            // Allow Start once all attempts are done (even if some failed)
-            if (loadedAssets === totalAssets) {
+            if (loadedAssets === totalAssets && CHARACTERS.every(c => c.loaded)) {
                 assetsLoaded = true;
                 gameState.setStart();
             }
         };
         char.image.src = char.src;
     });
-
-    // Fallback: if assets stall, enter Start after a short delay
-    setTimeout(() => {
-        if (!assetsLoaded) {
-            assetsLoaded = true;
-            gameState.setStart();
-        }
-    }, 3000);
 
     // Character system
     const characterManager = new CharacterManager(CHARACTERS, canvas, gameState);
@@ -291,11 +281,6 @@
     }
 
     function draw() {
-        // Frame safety: reset any lingering canvas state
-        ctx.save();
-        ctx.globalAlpha = 1;
-        ctx.setTransform(1, 0, 0, 1, 0, 0);
-
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         ctx.fillStyle = '#15161b'; // match page background
         ctx.fillRect(0, 0, canvas.width, canvas.height);
@@ -354,9 +339,6 @@
                 performanceMonitor.getFrameTimeVariance().toFixed(1)
             );
         }
-
-        // Always restore to avoid state leaks across frames
-        ctx.restore();
     }
 
     function drawVolumeBars(ctx, canvas, barCount = 48, barHeight = 40) {
