fixed game canvas

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="roadmap-container">
                 <h2>Bug Reports and Feature Requests</h2>
-                <p>If you encounter any bugs or have feature requests, please let us know by contacting us on X.</p>
+                <p>If you encounter any bugs or have feature requests, please let us know by contacting us on X</a>.</p>
             </div>
         </div>
     </main>
@@ -142,8 +142,7 @@
                 char.loaded = false;
                 loadedAssets++;
                 loadingProgress = (loadedAssets / totalAssets) * 100;
-                // Start once all attempts are done, even if some failed
-                if (loadedAssets === totalAssets) {
+                if (loadedAssets === totalAssets && CHARACTERS.every(c => c.loaded)) {
                     assetsLoaded = true;
                     gameState.setStart();
                 }
@@ -154,8 +153,7 @@
             char.loaded = true;
             loadedAssets++;
             loadingProgress = (loadedAssets / totalAssets) * 100;
-            // Start once all assets (load or fail) have completed
-            if (loadedAssets === totalAssets) {
+            if (loadedAssets === totalAssets && CHARACTERS.every(c => c.loaded)) {
                 assetsLoaded = true;
                 gameState.setStart();
             }
@@ -176,8 +174,6 @@
 
     // Difficulty system
     const difficulty = new DifficultyManager(OBSTACLES);
-    // Link difficulty into game state so score scaling works
-    gameState.setDifficulty(difficulty);
 
     // Obstacles system
     const obstacles = new Obstacles(canvas.height, OBSTACLES, difficulty.pipeGap, difficulty.pipeSpacing);
