--- a/index.html
+++ b/index.html
@@ -26,27 +26,31 @@
                 <p>Click or tap to make your character jump. Avoid obstacles and collect points to increase your score!</p>
                 <p>Each level increases the difficulty but also gives you more rewards. Watch for special patterns that may appear!</p>
             </div>
-            <div class="roadmap-section">
-                <h2 class="roadmap-title">Our Roadmap</h2>
-                <div class="roadmap-scroll">
-                    <div class="roadmap-container">
-                        <h2>Roadmap</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
-                    <div class="roadmap-container">
-                        <h2>Our Mission</h2>
-                        <p>Crypto traders show addiction-like compulsive behaviors when facing losses. Pumpy Pill aims to develop loss tolerance and emotional regulation under pressure.</p>
-                    </div>
-                    <div class="roadmap-container">
-                        <h2>About Us</h2>
-                        <p>Suicide rates have increased 16% since 2011. The 2008 crash caused 6,566 additional deaths. Crypto's 24/7 volatility creates unprecedented psychological pressure.</p>
-                    </div>
-                    <div class="roadmap-container">
-                        <h2>Contact Us</h2>
-                        <p>If you have any questions or feedback, please reach out to us at <a href="mailto:support@pumpypill.com">support@pumpypill.com</a>.</p>
-                    </div>
+
+            <!-- Roadmap row wrapper start -->
+            <section class="roadmap-row" aria-label="Product roadmap">
+                <div class="roadmap-container">
+                    <h2>Roadmap</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
-            </div>
+                <div class="roadmap-container">
+                    <h2>Our Mission</h2>
+                    <p>Crypto traders show addiction-like compulsive behaviors when facing losses. Pumpy Pill aims to develop loss tolerance and emotional regulation under pressure. Train your brain to think clearly when portfolios are bleeding.</p>
+                </div>
+                <div class="roadmap-container">
+                    <h2>About Us</h2>
+                    <p>Suicide rates have increased 16% since 2011. The 2008 crash caused 6,566 additional deaths. Crypto's 24/7 volatility creates unprecedented psychological pressure. We built Pumpy Pill because the industry has a mental health problem no one talks about.</p>
+                </div>
+                <div class="roadmap-container">
+                    <h2>Contact Us</h2>
+                    <p>If you have any questions or feedback, please reach out to us at <a href="mailto:support@pumpypill.com">support@pumpypill.com</a>.</p>
+                </div>
+                <div class="roadmap-container">
+                    <h2>Bug Reports and Feature Requests</h2>
+                    <p>If you encounter any bugs or have feature requests, please let us know by contacting us on X.</p>
+                </div>
+            </section>
+            <!-- Roadmap row wrapper end -->
         </div>
     </main>
     <footer>
