roadmap updates pt 2

--- a/index.html
+++ b/index.html
@@ -28,7 +28,35 @@
             </div>
             <div class="roadmap-container">
                 <h2>Roadmap</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="roadmap-row">
+                    <div class="roadmap-card">
+                        <div class="roadmap-icon">
+                            <img src="/1.7/assets/icons/goal1.svg" alt="Goal 1 Icon">
+                        </div>
+                        <div class="roadmap-content">
+                            <h3>Phase 1</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                    <div class="roadmap-card">
+                        <div class="roadmap-icon">
+                            <img src="/1.7/assets/icons/goal2.svg" alt="Goal 2 Icon">
+                        </div>
+                        <div class="roadmap-content">
+                            <h3>Phase 2</h3>
+                            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                    </div>
+                    <div class="roadmap-card">
+                        <div class="roadmap-icon">
+                            <img src="/1.7/assets/icons/goal3.svg" alt="Goal 3 Icon">
+                        </div>
+                        <div class="roadmap-content">
+                            <h3>Phase 3</h3>
+                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="mission-container">
                 <h2>Our Mission</h2>
