--- a/index.html
+++ b/index.html
@@ -28,22 +28,7 @@
             </div>
             <div class="roadmap-container">
                 <h2>Roadmap</h2>
-                <div class="roadmap-row">
-                    <div class="roadmap-checkpoint">
-                        <h3>Phase 1</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                    <div class="roadmap-connector"></div>
-                    <div class="roadmap-checkpoint">
-                        <h3>Phase 2</h3>
-                        <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
-                    <div class="roadmap-connector"></div>
-                    <div class="roadmap-checkpoint">
-                        <h3>Phase 3</h3>
-                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
-                    </div>
-                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <div class="mission-container">
                 <h2>Our Mission</h2>
