new roadmap phases

--- a/index.html
+++ b/index.html
@@ -30,39 +30,39 @@
                 <h2>Roadmap</h2>
                 <div class="roadmap-grid">
                     <div class="roadmap-item">
-                        <div class="roadmap-icon">
-                            <img src="/1.7/assets/icons/phase1.png" alt="Phase 1 Icon">
-                        </div>
                         <div class="roadmap-content">
                             <h3>Phase 1</h3>
                             <p>Presale and Marketing: Launch with fair pricing and allocate funds for professional marketing strategies.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
-                        <div class="roadmap-icon">
-                            <img src="/1.7/assets/icons/phase2.png" alt="Phase 2 Icon">
-                        </div>
                         <div class="roadmap-content">
                             <h3>Phase 2</h3>
                             <p>Early Staking Incentives: Enable staking for presale buyers to earn rewards from high-yield opportunities.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
-                        <div class="roadmap-icon">
-                            <img src="/1.7/assets/icons/phase3.png" alt="Phase 3 Icon">
-                        </div>
                         <div class="roadmap-content">
                             <h3>Phase 3</h3>
                             <p>DEX Launch: Launch on Uniswap to provide the best trading environment and liquidity.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
-                        <div class="roadmap-icon">
-                            <img src="/1.7/assets/icons/phase4.png" alt="Phase 4 Icon">
-                        </div>
                         <div class="roadmap-content">
                             <h3>Phase 4</h3>
                             <p>Long-Term Passive Rewards: Distribute tokens to stakers over time for sustained passive rewards.</p>
+                        </div>
+                    </div>
+                    <div class="roadmap-item">
+                        <div class="roadmap-content">
+                            <h3>Phase 5</h3>
+                            <p>Leaderboards, Daily Quests, and Achievements: Boost retention with competitive and cooperative goals.</p>
+                        </div>
+                    </div>
+                    <div class="roadmap-item">
+                        <div class="roadmap-content">
+                            <h3>Phase 6</h3>
+                            <p>Seasonal Events and Community Tournaments: Time-limited modes, rewards, and social play.</p>
                         </div>
                     </div>
                 </div>
