visual updates for patterns + site updates for content and styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="/1.7/assets/site/logo.png" alt="Pumpy Pill Logo" style="height: 96px;width:auto;vertical-align:middle;display:inline-block;">
+        <img src="/1.7/assets/site/logo.png" alt="Pumpy Pill Logo" style="height: 72px;width:auto;vertical-align:middle;display:inline-block;">
     </header>
     <main>
         <h1 style="text-align:center;margin-bottom:16px;">Pumpy Pill</h1>
@@ -26,50 +26,50 @@
                 <p>Click or tap to make your character jump. Avoid obstacles and collect points to increase your score!</p>
                 <p>Each level increases the difficulty but also gives you more rewards. Watch for special patterns that may appear!</p>
             </div>
+            <div class="mission-container">
+                <h2>Our Mission</h2>
+                <p>Crypto traders show addiction-like compulsive behaviors when facing losses. Pumpy Pill aims to develop loss tolerance and emotional regulation under pressure. Train your brain to think clearly when portfolios are bleeding.</p>
+            </div>
             <div class="roadmap-container">
                 <h2>Roadmap</h2>
                 <div class="roadmap-grid">
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Phase 1</h3>
-                            <p>Presale and Marketing: Launch with fair pricing and allocate funds for professional marketing strategies.</p>
+                            <h3>Alpha</h3>
+                            <p>Announce and preview with public playtests. Utilize public feedback and internal testing for overall improvements.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Phase 2</h3>
-                            <p>Early Staking Incentives: Enable staking for presale buyers to earn rewards from high-yield opportunities.</p>
+                            <h3>Beta</h3>
+                            <p>Optimize visual improvements for enhanced engagement. Push rapid and iterative updates to resolve intermittent bugs.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Phase 3</h3>
-                            <p>DEX Launch: Launch on Uniswap to provide the best trading environment and liquidity.</p>
+                            <h3>Tokenization Phase</h3>
+                            <p>Utilize pump.fun to launch a token on Solana and generate seed funding through creator rewards. Leverage livestreaming for community growth and volume stimulation.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Phase 4</h3>
-                            <p>Long-Term Passive Rewards: Distribute tokens to stakers over time for sustained passive rewards.</p>
+                            <h3>Leaderboard and Rewards</h3>
+                            <p>When we hit 100 holders, we will push our wallet-based leaderboard live. Players can only make 2 leaderboard submissions per day, 25% of creator rewards will be distributed among the top 10 wallets on the leaderboard.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Phase 5</h3>
-                            <p>Leaderboards, Daily Quests, and Achievements: Boost retention with competitive and cooperative goals.</p>
+                            <h3>Growth Phase</h3>
+                            <p>Introduce new game content and in-game rewards, including more characters inspired by the pump fun ecosystem. Utilize creator rewards for iOS development and marketing initiatives. Release on App Store and Google Play.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Phase 6</h3>
-                            <p>Seasonal Events and Community Tournaments: Time-limited modes, rewards, and social play.</p>
+                            <h3>Next Steps</h3>
+                            <p>Pumpy Pill was created to be the flagship product of an overarching mental health initiative in the crypto space. We aim to raise awareness and provide brain training tools for emotional resilience among crypto traders.</p>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="mission-container">
-                <h2>Our Mission</h2>
-                <p>Crypto traders show addiction-like compulsive behaviors when facing losses. Pumpy Pill aims to develop loss tolerance and emotional regulation under pressure. Train your brain to think clearly when portfolios are bleeding.</p>
             </div>
             <div class="about-container">
                 <h2>About Us</h2>
