--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <img src="/1.7/assets/site/logo.png" alt="Pumpy Pill Logo" style="height: 72px;width:auto;vertical-align:middle;display:inline-block;">
     </header>
     <main>
-        <h1 style="text-align:center;margin-bottom:16px;">Pumpy Pill</h1>
         <div class="content-container">
             <div class="game-container">
                 <div class="canvas-container">
@@ -527,4 +526,5 @@
     gameLoop();
     </script>
 </body>
+</html>
 </html>
