--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pumpy Pill</title>
     <link rel="stylesheet" href="/1.7/styles.css">
+    <!-- Cupsey favicon -->
+    <link rel="icon" type="image/png" href="/1.7/assets/characters/cupsey.png">
+    <link rel="shortcut icon" type="image/png" href="/1.7/assets/characters/cupsey.png">
 </head>
 <body>
     <header>
