--- a/index.html
+++ b/index.html
@@ -37,38 +37,38 @@
                 <div class="roadmap-grid">
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Alpha</h3>
-                            <p>Announce and preview with public playtests. Utilize public feedback and internal testing for overall improvements.</p>
+                            <h3>Public Alpha</h3>
+                            <p>Open playtests to validate core feel, collect friction points, trim obvious frustration spikes, and harden stability before scaling.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Beta</h3>
-                            <p>Optimize visual improvements for enhanced engagement. Push rapid and iterative updates to resolve intermittent bugs.</p>
+                            <h3>Polished Beta</h3>
+                            <p>Refine visuals, timing curves, and hit feedback. Ship fast iterative patches to eliminate intermittent collision, performance and load edge cases.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Tokenization Phase</h3>
-                            <p>Utilize pump.fun to launch a token on Solana and generate seed funding through creator rewards. Leverage livestreaming for community growth and volume stimulation.</p>
+                            <h3>Token Launch & Funding</h3>
+                            <p>Launch a Solana token via pump.fun to bootstrap treasury through creator rewards while streaming development to grow an engaged holder base.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Leaderboard and Rewards</h3>
-                            <p>When we hit 100 holders, we will push our wallet-based leaderboard live. Players can only make 2 leaderboard submissions per day, 25% of creator rewards will be distributed among the top 10 wallets on the leaderboard.</p>
+                            <h3>Leaderboard & Daily Rewards</h3>
+                            <p>Deploy wallet‑based leaderboard after 100 holders. Limit to 2 verified submissions per day. Distribute 25% of creator rewards to the top 10 wallets.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Growth Phase</h3>
-                            <p>Introduce new game content and in-game rewards, including more characters inspired by the pump fun ecosystem. Utilize creator rewards for iOS development and marketing initiatives. Release on App Store and Google Play.</p>
+                            <h3>Growth & Mobile Launch</h3>
+                            <p>Add new obstacle patterns, character skins inspired by the ecosystem, and progression hooks. Allocate rewards to iOS/Android builds and marketing.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Next Steps</h3>
-                            <p>Pumpy Pill was created to be the flagship product of an overarching mental health initiative in the crypto space. We aim to raise awareness and provide brain training tools for emotional resilience among crypto traders.</p>
+                            <h3>Long-Term Vision</h3>
+                            <p>Evolve Pumpy Pill into a mental resilience toolkit: cognitive load modes, adaptive focus drills, and community challenges promoting healthy trading behavior.</p>
                         </div>
                     </div>
                 </div>
