--- a/index.html
+++ b/index.html
@@ -37,37 +37,37 @@
                 <div class="roadmap-grid">
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Public Alpha</h3>
+                            <h3>Alpha</h3>
                             <p>Open playtests to validate core feel, collect friction points, trim obvious frustration spikes, and harden stability before scaling.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Polished Beta</h3>
+                            <h3>Beta</h3>
                             <p>Refine visuals, timing curves, and hit feedback. Ship fast iterative patches to eliminate intermittent collision, performance and load edge cases.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Token Launch & Funding</h3>
+                            <h3>Token Launch</h3>
                             <p>Launch a Solana token via pump.fun to bootstrap treasury through creator rewards while streaming development to grow an engaged holder base.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Leaderboard & Daily Rewards</h3>
-                            <p>Deploy wallet‑based leaderboard after 100 holders. Limit to 2 verified submissions per day. Distribute 25% of creator rewards to the top 10 wallets.</p>
+                            <h3>Leaderboard & Rewards</h3>
+                            <p>Deploy wallet‑based leaderboard at 100 holders. Limit to 2 verified submissions per day. Distribute 25% of creator rewards to the top 10 wallets.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Growth & Mobile Launch</h3>
-                            <p>Add new obstacle patterns, character skins inspired by the ecosystem, and progression hooks. Allocate rewards to iOS/Android builds and marketing.</p>
+                            <h3>Mobile Launch</h3>
+                            <p>Add new obstacle patterns, character skins inspired by the pump fun ecosystem, and progression hooks. Allocate rewards to iOS/Android builds and marketing.</p>
                         </div>
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Long-Term Vision</h3>
+                            <h3>Long Term</h3>
                             <p>Evolve Pumpy Pill into a mental resilience toolkit: cognitive load modes, adaptive focus drills, and community challenges promoting healthy trading behavior.</p>
                         </div>
                     </div>
