--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="roadmap-item">
                         <div class="roadmap-content">
-                            <h3>Leaderboard & Rewards</h3>
+                            <h3>Rewards</h3>
                             <p>Deploy wallet‑based leaderboard at 100 holders. Limit to 2 verified submissions per day. Distribute 25% of creator rewards to the top 10 wallets.</p>
                         </div>
                     </div>
